[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bokeh_transform_utils"
dynamic = ["version"]
authors = [
    {name = "Samuel James Bader", email = "samuel.bader@intel.com"}
]
description = "Miscellaneous transform utilities for Bokeh"
readme = "README.md"
classifiers =[
  "License :: OSI Approved :: MIT License"
]

[options]
install_requires = [
    "bokeh >= 3.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "bokeh_transform_utils.__version__"}