[metadata]
name = bokeh_transform_utils
version = attr: bokeh_transform_utils.__version__
author = Samuel James Bader
author_email = samuel.james.bader@gmail.com
description = Miscellaneous transform utilities for Bokeh
license = 'MIT'

[options]
install_requires =
    bokeh ~= 3.2

package_dir=
    =src
packages=find:

test =
    pytest

[options.packages.find]
where=src